Update code for new id generator
